@@ -35,7 +35,7 @@ defined('_JEXEC') or die;
 					<?php echo JText::_('COM_ADMIN_SAFE_MODE'); ?>
 				</td>
 				<td>
-					<?php echo JHtml::_('phpsetting.boolean',$this->php_settings['safe_mode']); ?>
+					<?php echo JHtml::_('phpsetting.boolean', $this->php_settings['safe_mode']); ?>
 				</td>
 			</tr>
 			<tr>
@@ -43,7 +43,7 @@ defined('_JEXEC') or die;
 					<?php echo JText::_('COM_ADMIN_OPEN_BASEDIR'); ?>
 				</td>
 				<td>
-					<?php echo JHtml::_('phpsetting.string',$this->php_settings['open_basedir']); ?>
+					<?php echo JHtml::_('phpsetting.string', $this->php_settings['open_basedir']); ?>
 				</td>
 			</tr>
 			<tr>
@@ -51,7 +51,7 @@ defined('_JEXEC') or die;
 					<?php echo JText::_('COM_ADMIN_DISPLAY_ERRORS'); ?>
 				</td>
 				<td>
-					<?php echo JHtml::_('phpsetting.boolean',$this->php_settings['display_errors']); ?>
+					<?php echo JHtml::_('phpsetting.boolean', $this->php_settings['display_errors']); ?>
 				</td>
 			</tr>
 			<tr>
@@ -59,7 +59,7 @@ defined('_JEXEC') or die;
 					<?php echo JText::_('COM_ADMIN_SHORT_OPEN_TAGS'); ?>
 				</td>
 				<td>
-					<?php echo JHtml::_('phpsetting.boolean',$this->php_settings['short_open_tag']); ?>
+					<?php echo JHtml::_('phpsetting.boolean', $this->php_settings['short_open_tag']); ?>
 				</td>
 			</tr>
 			<tr>
@@ -67,7 +67,7 @@ defined('_JEXEC') or die;
 					<?php echo JText::_('COM_ADMIN_FILE_UPLOADS'); ?>
 				</td>
 				<td>
-					<?php echo JHtml::_('phpsetting.boolean',$this->php_settings['file_uploads']); ?>
+					<?php echo JHtml::_('phpsetting.boolean', $this->php_settings['file_uploads']); ?>
 				</td>
 			</tr>
 			<tr>
@@ -75,7 +75,7 @@ defined('_JEXEC') or die;
 					<?php echo JText::_('COM_ADMIN_MAGIC_QUOTES'); ?>
 				</td>
 				<td>
-					<?php echo JHtml::_('phpsetting.boolean',$this->php_settings['magic_quotes_gpc']); ?>
+					<?php echo JHtml::_('phpsetting.boolean', $this->php_settings['magic_quotes_gpc']); ?>
 				</td>
 			</tr>
 			<tr>
@@ -83,7 +83,7 @@ defined('_JEXEC') or die;
 					<?php echo JText::_('COM_ADMIN_REGISTER_GLOBALS'); ?>
 				</td>
 				<td>
-					<?php echo JHtml::_('phpsetting.boolean',$this->php_settings['register_globals']); ?>
+					<?php echo JHtml::_('phpsetting.boolean', $this->php_settings['register_globals']); ?>
 				</td>
 			</tr>
 			<tr>
@@ -91,7 +91,7 @@ defined('_JEXEC') or die;
 					<?php echo JText::_('COM_ADMIN_OUTPUT_BUFFERING'); ?>
 				</td>
 				<td>
-					<?php echo JHtml::_('phpsetting.boolean',$this->php_settings['output_buffering']); ?>
+					<?php echo JHtml::_('phpsetting.boolean', $this->php_settings['output_buffering']); ?>
 				</td>
 			</tr>
 			<tr>
@@ -99,7 +99,7 @@ defined('_JEXEC') or die;
 					<?php echo JText::_('COM_ADMIN_SESSION_SAVE_PATH'); ?>
 				</td>
 				<td>
-					<?php echo JHtml::_('phpsetting.string',$this->php_settings['session.save_path']); ?>
+					<?php echo JHtml::_('phpsetting.string', $this->php_settings['session.save_path']); ?>
 				</td>
 			</tr>
 			<tr>
@@ -107,7 +107,7 @@ defined('_JEXEC') or die;
 					<?php echo JText::_('COM_ADMIN_SESSION_AUTO_START'); ?>
 				</td>
 				<td>
-					<?php echo JHtml::_('phpsetting.integer',$this->php_settings['session.auto_start']); ?>
+					<?php echo JHtml::_('phpsetting.integer', $this->php_settings['session.auto_start']); ?>
 				</td>
 			</tr>
 			<tr>
@@ -115,7 +115,7 @@ defined('_JEXEC') or die;
 					<?php echo JText::_('COM_ADMIN_XML_ENABLED'); ?>
 				</td>
 				<td>
-					<?php echo JHtml::_('phpsetting.set',$this->php_settings['xml']); ?>
+					<?php echo JHtml::_('phpsetting.set', $this->php_settings['xml']); ?>
 				</td>
 			</tr>
 			<tr>
@@ -123,7 +123,15 @@ defined('_JEXEC') or die;
 					<?php echo JText::_('COM_ADMIN_ZLIB_ENABLED'); ?>
 				</td>
 				<td>
-					<?php echo JHtml::_('phpsetting.set',$this->php_settings['zlib']); ?>
+					<?php echo JHtml::_('phpsetting.set', $this->php_settings['zlib']); ?>
+				</td>
+			</tr>
+			<tr>
+				<td>
+					<?php echo JText::_('COM_ADMIN_ZIP_ENABLED'); ?>
+				</td>
+				<td>
+					<?php echo JHtml::_('phpsetting.set', $this->php_settings['zip']); ?>
 				</td>
 			</tr>
 			<tr>
@@ -131,7 +139,7 @@ defined('_JEXEC') or die;
 					<?php echo JText::_('COM_ADMIN_DISABLED_FUNCTIONS'); ?>
 				</td>
 				<td>
-					<?php echo JHtml::_('phpsetting.string',$this->php_settings['disable_functions']); ?>
+					<?php echo JHtml::_('phpsetting.string', $this->php_settings['disable_functions']); ?>
 				</td>
 			</tr>
 			<tr>
@@ -139,7 +147,7 @@ defined('_JEXEC') or die;
 					<?php echo JText::_('COM_ADMIN_MBSTRING_ENABLED'); ?>
 				</td>
 				<td>
-					<?php echo JHtml::_('phpsetting.set',$this->php_settings['mbstring']); ?>
+					<?php echo JHtml::_('phpsetting.set', $this->php_settings['mbstring']); ?>
 				</td>
 			</tr>
 			<tr>
@@ -147,7 +155,7 @@ defined('_JEXEC') or die;
 					<?php echo JText::_('COM_ADMIN_ICONV_AVAILABLE'); ?>
 				</td>
 				<td>
-					<?php echo JHtml::_('phpsetting.set',$this->php_settings['iconv']); ?>
+					<?php echo JHtml::_('phpsetting.set', $this->php_settings['iconv']); ?>
 				</td>
 			</tr>
 		</tbody>
